Trunk
-----
 
 * The toolbar in the one-to-many and many-to-many editor are configurable
   using the :meth:`ObjectAdmin.get_related_toolbar_actions` method.
   
 * Spanish translations
 
 * Possibility to add a close button to a form and to customize the form
   close action  

 * Filters can have a default value
 
 * Main menu and toolbars are configurable in the :class:`ApplicationAdmin` 
   through the use of actions, which allows creation of reduced main windows
   
 * Rewrite of Camelot functions behind toolbars and menus to actions
   
 * Move to SQLAlchemy 7.x
 
 * Undefer all fields that are going to be used in a view when querying the
   database

Release 11.11.16
----------------

 * Implementation of the new actions proposal (:ref:`doc-actions`), please
   consult the documentation and the tutorial (:ref:`tutorial-importer`) of the 
   actions to ease the migration.  Most old style actions can be replaced with 
   the new style action :class:`camelot.admin.action.list_action.CallMethod`

 * Delayed creation of widgets on tabs to improve performance for
   screens with lots of fields

 * Move to migrate 7.1
 
 * New splashscreen
 
 * Italian translations
 
 * PySide compatibility

Release 11.09.10
----------------

 * Refresh reexecutes queries in the table view
 
 * Deleted entities are grayed out in the GUI if they are deleted when
   visible
   
 * Add setup.py to new projects for easy packaging
 
 * The settings mechanism becomes plugable
 
 * Print preview does pdf export when no printer is available
 
 * Wizard to create a new project
 
   .. image:: /_static/actionsteps/change_object.png
   
 * API documentation integrated with sphinx

 * :class:`camelot.core.exception.UserException`, a subclass of Exception that
   can be used to inform the user in a gentle way he should behave different.

   .. image:: /_static/controls/user_exception.png

 * Reduced memory usage
 
 * Experimental PySide support
 