@@ -22,9 +22,6 @@
 #
 #  ============================================================================
 
-from PyQt4 import QtGui
-from PyQt4 import QtCore
-
 class AbstractManyToOneEditor(object):
     """Helper functions for implementing a `ManyToOneEditor`, to be used in the
     `ManyToOneEditor` and in the `ManyToManyEditor`"""
