@@ -32,7 +32,6 @@ from wideeditor import WideEditor
 from customeditor import CustomEditor
 
 from camelot.admin.action.list_action import ListActionGuiContext
-from camelot.view.art import Icon
 from camelot.view.model_thread import gui_function, model_function, post
 from camelot.core.utils import ugettext as _
 from camelot.view import register
